--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,11 +56,14 @@ dependencies {
     implementation 'com.google.android.gms:play-services-ads:22.0.0'
 
     implementation 'com.google.code.gson:gson:2.10.1'
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
     implementation 'com.google.firebase:firebase-analytics:17.3.0'
     implementation 'com.google.firebase:firebase-ads:22.0.0'
     implementation 'com.google.firebase:firebase-messaging:20.1.5'
     implementation 'com.onesignal:OneSignal:[4.0.0, 4.99.99]'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
 }
 
 apply plugin: 'com.google.gms.google-services'
