--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,6 +54,7 @@ dependencies {
 
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'com.google.android.gms:play-services-ads:22.0.0'
+    implementation 'com.android.billingclient:billing:6.0.1'
 
     implementation 'com.google.code.gson:gson:2.10.1'
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
