--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,11 +56,14 @@ dependencies {
     implementation 'com.google.android.gms:play-services-ads:22.0.0'
     implementation 'com.android.billingclient:billing:6.0.1'
 
+    implementation 'org.osmdroid:osmdroid-android:6.1.10'
+
     implementation 'com.google.code.gson:gson:2.10.1'
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
     implementation "androidx.room:room-runtime:2.3.0"
+    implementation 'com.google.android.gms:play-services-location:21.0.1'
     annotationProcessor "androidx.room:room-compiler:2.3.0"
 
     implementation 'com.google.firebase:firebase-analytics:17.3.0'
